--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -471,7 +471,7 @@ p{
 	text-align: center;
 }
 .our-product-sub {
-	background-image: url(../img/product-img-1.jpg);
+	background-image: url(/wp-content/themes/bootstrap2wordpress/assets/img/product-img-1.jpg);
 	min-height: 390px !important;
 	background-size: cover;
 	padding-right: 0px;
@@ -510,7 +510,7 @@ p{
 
 
 .our-corporate-sub {
-	background-image: url(../img/product-img-2.jpg);
+	background-image: url(/wp-content/themes/bootstrap2wordpress/assets/img/product-img-2.jpg);
 	min-height: 390px !important;
 	background-size: cover;
 	padding-left: 0px;
@@ -549,7 +549,7 @@ p{
 
 
 .our-formals-sub {
-	background-image: url(../img/product-img-3.jpg);
+	background-image: url(/wp-content/themes/bootstrap2wordpress/assets/img/product-img-3.jpg);
 	min-height: 390px !important;
 	background-size: cover;
 	padding-right: 0px;
@@ -588,7 +588,7 @@ p{
 
 
 .our-uniforms-sub {
-	background-image: url(../img/product-img-4.jpg);
+	background-image: url(/wp-content/themes/bootstrap2wordpress/assets/img/product-img-4.jpg);
 	min-height: 390px !important;
 	background-size: cover;
 	padding-left: 0px;
@@ -734,7 +734,7 @@ header {
 
 /*-------about-us-start-------------*/
 .about-us-content {
-	background-image: url(../img/about-bg.jpg);
+	background-image: url(/wp-content/themes/bootstrap2wordpress/assets/img/about-bg.jpg);
 	background-size: cover;
 	width: 100%;
 	height: 500px;
@@ -765,7 +765,7 @@ header {
 
 /*------- our vision start --------*/
 .our-vision-content {
-	background-image: url(../img/our-vision-bg.jpg);
+	background-image: url(/wp-content/themes/bootstrap2wordpress/assets/img/our-vision-bg.jpg);
 	background-size: cover;
 	width: 100%;
 	height: 500px;
