contact us style update

--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -388,7 +388,7 @@ object {
 }
 
 /***
-our actual style start by navis
+strings-unlimited style updates by Navis Michael Bearly
 **/
 *{
 	margin: 0; padding: 0;
@@ -806,4 +806,3 @@ header {
 	list-style: disc;
 } 
 /*------- our vision end ----------*/
-
