--- a/css/style.css
+++ b/css/style.css
@@ -800,6 +800,7 @@ header {
 	text-transform: uppercase; 
 	font-weight: 300;
 	transition: .9s;
+	padding-bottom: 30px;
 }
 .flat-input .submit:hover {
 	background-color: #333333;
