--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -460,12 +460,14 @@ p{
 .ab-but:hover {
 	color: #00abff;
 }
+/*
 #top-fixed {
 	margin-top: 133px;
 }
 .about-us-content {
 	margin-top: 133px;
 }
+*/
 
  
 
