--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -209,7 +209,7 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 .site-content:after,
 .site-footer:before,
 .site-footer:after {
-	content: "";
+	content: "Hello";
 	display: table;
 	table-layout: fixed;
 }
