--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -1341,7 +1341,7 @@ header {
    color: #fff;
 }
 
-.why-us-content-sub-text ul li {
+.why-us-content-sub-text li {
    font-size: 18px;
    font-weight: 300;
    color: #fff;
