--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2651,6 +2651,29 @@ header {
   position: absolute;
   left: 0;
 }
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 90%;
+  }
 
+  .list--item {
+    width: 20%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .list--item {
+    width: 33%;
+  }
+}
+@media screen and (max-width: 620px) {
+  .list--item {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .list--item {
+    width: 100%;
+  }
+}
 
 /** 5 strips - end */
