--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2647,7 +2647,7 @@ header {
 .floater {
   width: 20%;
   height: 50px;
-  background: #262626;
+  background: #46cefe;
   position: absolute;
   left: 0;
 }
