--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2617,6 +2617,7 @@ header {
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
+  height: 500px !important;
 }
 .list--item figure {
   background: #fff;
