--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2635,6 +2635,7 @@ header {
 }
 .list--item header, .list--item figcaption {
   padding-left: 25%;
+  background: #46cefe;
 }
 .list--item header {
   margin-top: 12px;
