--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2641,6 +2641,7 @@ header {
    text-overflow: ellipsis;
    display: -webkit-box;
    line-height: 16px;     /* fallback */
+   max-height: 100px;      /* fallback */
    -webkit-line-clamp: 4; /* number of lines to show */
    -webkit-box-orient: vertical;
 }
