--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2627,7 +2627,9 @@ header {
 }
 .list--item figure:hover {
   transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  background:  #46cefe;
 }
+
 .list--item img {
   display: block;
   width: 100%;
