--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2627,7 +2627,8 @@ header {
 }
 .list--item figure:hover {
   transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-  background:  #46cefe;
+   padding: 0 20px;
+  margin-bottom: 17px;
 }
 
 .list--item img {
