--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2697,3 +2697,13 @@ header {
 }
 
 /** 5 strips - end */
+
+
+
+.dropdown-menu{
+ 
+background-color: #A8DEEE;
+ 
+border: 1px solid #428BCA;
+ 
+}
