--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2702,8 +2702,10 @@ header {
 
 .dropdown-menu{
  
-background-color: #A8DEEE;
- 
-border: 1px solid #428BCA;
- 
+/*background-color: #A8DEEE;
+ */
+ opacity: .4; /* other browsers  and IE9+ */
+    filter: alpha(opacity=40); /* IE6+ */
+    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=40); /* IE6+ */
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=40)"; /* this works in IE8 only */
 }
