--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2699,8 +2699,9 @@ header {
 /** 5 strips - end */
 
 .dropdown-menu{
-	opacity: .8; /* other browsers  and IE9+ */
-	filter: alpha(opacity=80); /* IE6+ */
-	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80); /* IE6+ */
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=80)"; /* this works in IE8 only */
+	background-color: #000000;
+	opacity: .9; /* other browsers  and IE9+ */
+	filter: alpha(opacity=90); /* IE6+ */
+	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=90); /* IE6+ */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=90)"; /* this works in IE8 only */
 }
