--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2705,3 +2705,7 @@ header {
 	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=90); /* IE6+ */
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=90)"; /* this works in IE8 only */
 }
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+  color: #e5dbdb;
+  background-color: #425766;
+}
