--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -2705,3 +2705,9 @@ header {
   color: #e5dbdb;
   background-color: #425766;
 }
+
+.img-responsive2 {
+    display: inline-block;
+    max-width: 20%;
+    height: auto;
+}
