--- a/wp-content/themes/strings-unlimited/style.css
+++ b/wp-content/themes/strings-unlimited/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Bootstrap to Wordpress
+Theme Name: Strings Unlimited
 Theme URI: https://www.linkedin.com/in/navismichaelbearly/
 Author: Navis Michael Bearly J
 Author URI: https://www.linkedin.com/in/navismichaelbearly/
