--- a/wp-content/themes/strings-unlimited/rtl.css
+++ b/wp-content/themes/strings-unlimited/rtl.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Bootstrap to Wordpress
+Theme Name: Strings Unlimited
 
 Adding support for languages written in a Right To Left (RTL) direction is easy -
 it's just a matter of overwriting all the horizontal positioning attributes
