--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -1378,7 +1378,7 @@ header {
 .about-us-content-sub {
 	text-align: center;
 	padding: 80px 60px;
-	background-color: #ffffff !important;
+	background:rgba(255,255,255, 0.9) !important;
 	margin: 20px 0px 20px 0px;
 }
 /*.about-us-content-sub button {
