--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -796,6 +796,7 @@ header {
    font-size: 18px;
    font-weight: 500;
    color: #000;
+   text-align: justify;
 }
 .about-us-content-sub {
 	text-align: center;
