--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -799,7 +799,7 @@ header {
    text-align: justify;
 }
 .about-us-content-sub {
-	text-align: center;
+	text-align: justify;
 	padding: 80px 60px;
 }
 .about-us-content-sub button {
