--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -1374,13 +1374,13 @@ header {
    color: #00bfff;
 }
 .why-us-content-sub {
-	text-align: center;
+	text-align: justify-all;
 	padding: 80px 60px;
 	background-color: rgba(0, 0, 0, 0.62) !important;
 	margin: 20px 0px 20px 0px;
 }
 .about-us-content-sub {
-	text-align: center;
+	text-align: justify-all;
 	padding: 80px 60px;
 	background:rgba(255,255,255, 0.4) !important;
 	margin: 20px 0px 20px 0px;
