--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -790,7 +790,7 @@ header {
 	background-image: url(/wp-content/themes/bootstrap2wordpress/assets/img/about-bg.jpg);
 	background-size: cover;
 	width: 100%;
-	height: 500px;
+	height: 100%;
 }
 .about-us-content-sub p {
    font-size: 18px;
