--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -531,7 +531,7 @@ p{
 .our-corporate-cont {
 	width: 60%;
 	float: left;
-	background-color: #0009;
+	background-color: #000;
 	min-height: 390px;
 	color: #fff;
 	opacity: .8;
@@ -648,15 +648,19 @@ p{
 .our-uniforms-cont {
 	width: 60%;
 	float: left;
-	background-color: #0009;
+	background-color: #000;
 	min-height: 390px;
 	color: #fff;
+	opacity: .8;
+	filter: alpha(opacity=80); /* IE6+ */
+	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80); /* IE6+ */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=80)"; /* this works in IE8 only */
 }
 
 .our-sub-uniforms {
 	padding: 100px 20px 0px 20px;
 	text-align: left;
-	opacity: .8;
+	
 }
 .our-sub-uniforms h4 {
 	font-size: 35px;
